--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<html lang = "en">
+<head>
+  <!-- basic.html -->
+  <title>1st web push</title>
+  <meta charset = "UTF-8" />
+</head>
+<body>
+    <h1>Hello World</h1>
+    <p>This is just the beginning of what is to come.</p>
+</body>
